[package]
name = "cluster-editing"
version = "0.1.0"
authors = ["Sebastian Paarmann <sebastian@s-paarmann.de>"]
edition = "2018"
default-run = "cluster-editing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
path-log = []
detailed-logs = []

[dependencies]
env_logger = "0.8.2"
log = "0.4.11"
petgraph = "0.5.1"
rayon = "1.5.0"
rustc-hash = "1.1.0"
structopt = "0.3.21"
wait-timeout = "0.2.0"

[[bin]]
name = "reduction"
path = "src/tools/reduction.rs"

[[bin]]
name = "runner"
path = "src/tools/runner.rs"

[profile.release]
opt-level = 3
debug = 1
lto = "fat"
